<resources>
    <string name="app_name">AgeCalculator</string>
    <string name="button">Button</string>
    <string name="enter_ur_birth_date">Enter ur Birth Date</string>
    <string name="text">text</string>
    <string name="today_date">Today\'s Date</string>
    <string name="your_age">Your Age</string>
    <string name="your_birthdate">Your BirthDate</string>
    <string name="calendar">C</string>
    <string name="submit">submit</string>
</resources>